# library

./: .gitignore  Makefile  README.md  flake.nix  go.mod  go.sum  main.go
.github/workflows/: ci.yml
cmd/: add.go  article.go  root.go  video.go
cmd/add/: root.go
pkg/html/: title.go
pkg/metadata/: format.go  title.go
pkg/notedown/: client.go  config.go
pkg/plugin/: connection.go
plugins/extract/: buf.gen.yaml  buf.yaml  cli.py  generate.go  plugin.py  pyinstaller.py  pyproject.toml  test.md
plugins/extract/api/: extract.pb.go  extract_grpc.pb.go
plugins/extract/extract/: __init__.py  main.py
plugins/extract/extract/grpc/: extract_pb2.py  extract_pb2.pyi  extract_pb2_grpc.py
plugins/extract/lib/markup/: html.py
plugins/extract/lib/transcribing/: models.py  splitting.py  video.py
plugins/extract/proto/: extract.proto
